[metadata]
name = aiogram-tools
url = https://github.com/LDmitriy7/aiogram-tools
license = MIT
author = 'LDmitriy7'
author_email = 'ldm.work2019@gmail.com'
description = Some additional tools for aiogram library
long_description = file: README.rst

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Typing :: Typed

python_requires = >=3.9


;    packages=['aiogram_tools'],
;    url='https://github.com/LDmitriy7/aiogram-tools',
;    license='MIT',
;    author='LDmitriy7',
;    author_email='ldm.work2019@gmail.com',
;    description='Some additional tools for aiogram library',
;    long_description=open('README.rst').read(),
;
;    classifiers=[
;        'Development Status :: 2 - Pre-Alpha'
;        'Environment :: Console',
;        'Framework :: AsyncIO',
;        'Intended Audience :: Developers',
;        'License :: OSI Approved :: MIT License',
;        'Programming Language :: Python :: 3.9',
;        'Typing :: Typed'
;    ],
;    setup_requires=['pbr'], pbr=True,
;
;    install_requires=[
;        'aiogram>=2.11.2',
;    ],
;
;)
