[metadata]
name = aiogram-tools
version = 0.3a1
url = https://github.com/LDmitriy7/aiogram-tools
license = MIT
author = LDmitriy7
author_email = ldm.work2019@gmail.com
description = Some additional tools for aiogram library
long_description = file: README.md

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.9
install_requires =
    aiogram>=2.12.1